# cg_search_race

./: .coveragerc  .gitignore  Makefile  README.md  evaluate.py  main.py  pyproject.toml  requirements.txt  train.py  utils.py
ai/: __init__.py  adapter.py  agent.py  memory.py  networks.py
ai/AG/: __init__.py  eval.py  genetic.py  saver.py
game/: __init__.py  action.py  checkpoint.py  game.py  pod.py  point.py  renderer.py
tests/: test_game.py  test_pod.py  test_point.py  test_saver.py
